Refactor Auth - Feat: Delete Education - Feat: Delete Work Experience
